# morphkit

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE-docs.md  LICENSE.md  MANIFEST.in  README.md  create_docs.ipynb  license.ipynb  morphkit_20250603-131540.cdx.json  pyproject.toml  requirements.txt  software architecture.pptx
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  publish.yml  release.yml  static.yml
docs/: README.md  build_versioned_docs.py
docs/source/: architecture.rst  conf.py  index.rst  install.rst  license.rst  releases.rst  usage.rst
docs/source/_static/: version-selector.css  version-selector.js  versions.json
docs/source/_templates/: searchbox.html  version-selector.html
docs/source/api/: morphkit.analyze_word_with_morpheus.rst  morphkit.annotate_and_sort_analyses.rst  morphkit.parse_word_block.rst  morphkit.rst
docs/source/api/autogen/: morphkit.analyse_morph_tag.rst  morphkit.analyse_word_with_morpheus.rst  morphkit.analyze_morph_tag.rst  morphkit.parse_word_block.rst
morphkit/: __init__.py  _version.py  analyse_morph_tag.py  analyse_pos.py  analyse_word_with_morpheus.py  annotate_and_sort_analyses.py  config.py  decode_tag.py  get_word_blocks.py  init_compare_tags.py  licenses.json  package_info.json  parse_word_block.py  requirements.txt  split_into_raw_blocks.py
notebooks/: Morphkit_usage_examples.ipynb
validation/: package_inspection.ipynb  test_timeout.ipynb  testcases.ipynb
